fix: add OIDC permissions for AWS authentication

--- a/.github/workflows/example-matrix.yml
+++ b/.github/workflows/example-matrix.yml
@@ -17,6 +17,11 @@ on:
           - destroy
           - plan
 
+# Required for OIDC authentication with AWS
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     name: Deploy ${{ matrix.instance }}
