--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -14,6 +14,10 @@ on:
       - 'action.yml'
       - 'entrypoint.sh'
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   validate-terraform:
     name: Validate Terraform
