--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -5,6 +5,16 @@ on:
     branches:
       - main
   workflow_dispatch:
+    inputs:
+      action:
+        description: 'Action to perform'
+        required: true
+        default: 'apply'
+        type: choice
+        options:
+          - apply
+          - destroy
+          - plan
 
 env:
   region: us-east-1
@@ -13,6 +23,7 @@ jobs:
   validate:
     name: Validate
     runs-on: ubuntu-latest
+    if: github.event.inputs.action != 'destroy'
     steps:
       - uses: actions/checkout@v4
 
@@ -38,6 +49,7 @@ jobs:
     name: Integration Test
     runs-on: ubuntu-latest
     needs: validate
+    if: always() && (needs.validate.result == 'success' || github.event.inputs.action == 'destroy')
 
     permissions:
       id-token: write
@@ -57,12 +69,12 @@ jobs:
         with:
           instance: test-aurora-action
 
-      - name: Deploy Aurora
+      - name: Run Aurora Action
         uses: ./
         id: aurora
         with:
           name: test-aurora-action
-          action: destroy
+          action: ${{ github.event.inputs.action || 'apply' }}
           vpc_id: ${{ secrets.TEST_VPC_ID }}
           subnet_ids: ${{ secrets.TEST_SUBNET_IDS }}
           deletion_protection_enabled: 'false'
@@ -70,6 +82,7 @@ jobs:
           max_capacity: '2'
 
       - name: Display Outputs
+        if: github.event.inputs.action != 'destroy'
         run: |
           echo "=== Aurora Outputs ==="
           echo "Endpoint: ${{ steps.aurora.outputs.cluster_endpoint }}"
@@ -78,6 +91,7 @@ jobs:
           echo "Database: ${{ steps.aurora.outputs.database_name }}"
 
       - name: Test Credentials
+        if: github.event.inputs.action != 'destroy'
         run: |
           SECRET=$(aws secretsmanager get-secret-value \
             --secret-id ${{ steps.aurora.outputs.secret_arn }} \
@@ -91,11 +105,6 @@ jobs:
             exit 1
           fi
 
-      # - name: Cleanup
-      #   if: always()
-      #   uses: ./
-      #   with:
-      #     name: test-aurora-action
-      #     action: destroy
-      #     vpc_id: ${{ secrets.TEST_VPC_ID }}
-      #     subnet_ids: ${{ secrets.TEST_SUBNET_IDS }}
+      - name: Destroy Complete
+        if: github.event.inputs.action == 'destroy'
+        run: echo "✅ Resources destroyed successfully"
